<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/dialog"
            android:layout_width="300dp"
            android:layout_height="470dp"
            android:background="@drawable/radius_border_yellow"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            >

            <ImageView
                android:id="@+id/dialog_close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/close"
                android:padding="2sp"
                android:textColor="@color/red_normal"
                android:textSize="25sp"
                bind:layout_constraintBottom_toTopOf="@+id/lock_bg"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent"
                bind:layout_constraintBottom_toTopOf="@+id/lock_bg"
                />

            <View
                android:id="@+id/lock_bg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_lock_icon_bg"
                android:scaleType="centerInside"
                android:layout_marginBottom="10dp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/dialog_close"
                bind:layout_constraintBottom_toTopOf="@+id/title"
                />

            <ImageView
                android:id="@+id/lock_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:src="@drawable/lock"
                android:layout_marginBottom="10dp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="@+id/lock_bg"
                bind:layout_constraintBottom_toBottomOf="@+id/lock_bg"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/please_enter_password"
                android:textColor="@color/black"
                android:textSize="12sp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/lock_bg"
                bind:layout_constraintBottom_toTopOf="@+id/dsp_password"
                />

            <TextView
                android:id="@+id/dsp_password"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:inputType="numberPassword"
                android:hint="@string/password"
                android:maxLength="12"
                android:textColorHint="@color/gray_lighter"
                android:background="@drawable/radius_border_gray_bg_white"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/title"
                bind:layout_constraintBottom_toTopOf="@+id/btn_1"
                />

            <TextView
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="230dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key1"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_4"
                bind:layout_constraintEnd_toStartOf="@+id/btn_2"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="230dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key2"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_5"
                bind:layout_constraintEnd_toStartOf="@+id/btn_3"
                bind:layout_constraintStart_toEndOf="@+id/btn_1"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="230dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key3"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_6"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toEndOf="@+id/btn_2"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key4"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_7"
                bind:layout_constraintEnd_toStartOf="@+id/btn_5"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/btn_1" />

            <TextView
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key5"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_8"
                bind:layout_constraintEnd_toStartOf="@+id/btn_6"
                bind:layout_constraintStart_toEndOf="@+id/btn_4"
                bind:layout_constraintTop_toBottomOf="@+id/btn_2" />

            <TextView
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key6"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_9"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toEndOf="@+id/btn_5"
                bind:layout_constraintTop_toBottomOf="@+id/btn_3" />


            <TextView
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key7"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_del"
                bind:layout_constraintEnd_toStartOf="@+id/btn_8"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/btn_4" />

            <TextView
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key8"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_0"
                bind:layout_constraintEnd_toStartOf="@+id/btn_9"
                bind:layout_constraintStart_toEndOf="@+id/btn_7"
                bind:layout_constraintTop_toBottomOf="@+id/btn_5" />

            <TextView
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key9"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toTopOf="@+id/btn_ok"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toEndOf="@+id/btn_8"
                bind:layout_constraintTop_toBottomOf="@+id/btn_6" />

            <TextView
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_password_item_bg"
                android:gravity="center"
                android:text="@string/key0"
                android:textColor="@color/black"
                android:textSize="30sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toStartOf="@+id/btn_ok"
                bind:layout_constraintStart_toEndOf="@+id/btn_del"
                bind:layout_constraintTop_toBottomOf="@+id/btn_8" />

            <ImageView
                android:id="@+id/btn_del"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_password_item_bg"
                android:scaleType="centerInside"
                android:src="@drawable/ic_backspace_white"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toStartOf="@+id/btn_0"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/btn_7" />

            <ImageView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/input_password_item_bg"
                android:scaleType="centerInside"

                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"

                android:src="@drawable/ic_confirm_white"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toEndOf="@+id/btn_0"
                bind:layout_constraintTop_toBottomOf="@+id/btn_9" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</layout>